tests/src/frontend/typechecking/invalid/overridable5.sk
base class Foo {
  fun foo(): void;
}
base class Traity {
  overridable fun foo(): void {
    void
  }
}
base class Foo2 extends Foo, Traity {
  fun foo from Foo;
}
